# clankerflow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: PROJECT.md  coverage.md  examples.md  ipc.md  todo.md
docs/future/: daemon.md
docs/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
kit/: opencode.json  settings.json  tsconfig.json
kit/context/roles/: pm.md
kit/context/skills/: reviewer.md
runtime/: .prettierignore  .prettierrc.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
runtime/src/: context.ts  helpers.ts  ipc.ts  loader.ts  protocol.ts  runner.ts  server.ts  tools.ts  utils.ts
runtime/src/helpers/: fs.ts  git.ts
runtime/src/helpers/tickets/: context.ts  index.ts  lookup.ts  ops.ts  parser.ts  scanner.ts  schema.ts
runtime/src/tools/: agent.ts  exec.ts  fs.ts  git.ts  log.ts  sleep.ts  tickets.ts
runtime/src/tools/agent/: abort.ts  parsing.ts  payload.ts  runtime.ts  server-url.ts  types.ts
runtime/src/tools/tickets/: context.ts  ops.ts  parser.ts
runtime/tests/: agent.test.ts  context.test.ts  fs.test.ts  ipc.test.ts  loader.test.ts  runner.test.ts  tickets.test.ts
runtime/tests/fixtures/: workflow-cancel.ts  workflow-fetch-error.ts  workflow-invalid-default.ts  workflow-invalid-meta.ts  workflow-valid.ts
runtime/workflows/: default.ts  duos.ts  squad.ts
src/: core.rs  kit.md  main.rs
src/app/: cli.rs  commands.rs  types.rs
src/app/commands/: containment.rs  init.rs  make.rs  manage.rs  work.rs
src/core/: capabilities.rs  codebase_id.rs  daemon.rs  docker.rs  embeds.rs  ipc.rs  opencode.rs  opencode_config.rs  project.rs  runner.rs  runtime.rs  settings.rs  tickets.rs
src/core/daemon/: process.rs  protocol.rs  store.rs
src/core/opencode/: client.rs  config.rs  server.rs
src/core/runner/: env.rs  ipc_loop.rs  protocol.rs  signal.rs  store.rs
src/db/: connection.rs  db.rs  entities.rs  migration.rs  mod.rs
src/db/entities/: agent.rs  enums.rs  event.rs  mod.rs  workflow.rs  workflow_run.rs  workflow_session.rs
src/db/migration/: m0001_create_workflows_table.rs  m0002_create_workflow_runs_table.rs  m0003_create_workflow_sessions_table.rs  m0004_create_events_table.rs  m0005_add_run_id_to_workflow_runs.rs  mod.rs
src/kit/: AGENTS.md  gitignore.example  opencode.json  settings.json  tsconfig.json
src/kit/.agentctl/docker/: Dockerfile  agent.docker-compose.yaml
src/kit/.agentctl/frontend/: index.html
src/kit/.agentctl/lib/: helpers.js  runner.js
src/kit/.agentkata/docker/: agent.docker-compose.yaml
src/kit/.agentkata/lib/: package.json  tsconfig.json
src/kit/.agentkata/lib/src/: context.ts  helpers.ts  ipc.ts  loader.ts  utils.ts
src/kit/.agentkata/lib/src/helpers/: git.ts  tickets.ts
src/kit/.agentkata/lib/src/helpers/tickets/: lookup.ts  scanner.ts  schema.ts
src/kit/.agentkata/lib/src/utils/: exec.ts  log.ts
src/kit/.agentkata/lib/types/: agentkata.d.ts
src/kit/.clankerflow/docker/: agent.docker-compose.yaml
src/kit/context/roles/: architect.md  builder.md  dev.md  planner.md  qa.md
src/kit/context/skills/: worker.md
src/kit/context/templates/: ticket-template.md
src/kit/docs/: PROJECT.md
src/kit/workflows/: default.js  default.ts  duos.js  duos.ts  squad.js  squad.ts
tests/: runner_host_spawn.rs  runner_ipc.rs
tests/support/: mod.rs
